--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -5,3 +5,10 @@ spring:
   jpa:
     hibernate:
       ddl-auto: validate
+
+
+google:
+  recaptcha:
+    key:
+      site: '6Lf8j4EfAAAAACpAlC2q6oka4bZobAzkMc2vi-N6'
+      secret: '6Lf8j4EfAAAAAC2pDmscifexX5n-vGEmuoYUbh-u'
