--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -11,3 +11,5 @@ google:
     key:
       site: '6Lf8j4EfAAAAACpAlC2q6oka4bZobAzkMc2vi-N6'
       secret: '6Lf8j4EfAAAAAC2pDmscifexX5n-vGEmuoYUbh-u'
+
+## HTTPS config
