--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.profiles.active=prod
+spring.profiles.active=local
 
 spring.output.ansi.enabled=always
 
@@ -10,4 +10,3 @@ spring.datasource.password = root
 
 ## Flyway config
 spring.application.name=flywayapp
-## spring.jpa.hibernate.ddl-auto=validate
