configure https and update docu

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -13,3 +13,7 @@ google:
       secret: '6Lf8j4EfAAAAAC2pDmscifexX5n-vGEmuoYUbh-u'
 
 ## HTTPS config
+
+server:
+  servlet:
+    context-path: '/car-rental'
